# vcard.py

./: .gitignore  LICENSE.md  README.md  __init__.py  argparsing.py  function.py  functions.py  pyproject.toml  utils.py  vcard.py
