[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcard"
version = "0.1.0"
description = "vCard utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name"}]
license = {text = "MIT"}

# Install the single top-level module `vcard.py` as a py-module.
[tool.setuptools]
py-modules = ["vcard"]

[project.scripts]
# console script imports the top-level module `vcard` and calls `main`
vcard = "vcard:main"
